--- a/css/lawstyle.css
+++ b/css/lawstyle.css
@@ -41,10 +41,10 @@ table.oldschool td.foot {
   padding:10px 5px;
   vertical-align:top;}
       
-a:link, a:visited {
+a:visited {
   color: black;
   text-decoration: none;}
 
-a:hover, a:active {
+a:link, a:hover, a:active {
   color: #93df05;
   text-decoration: none;} 
