--- a/css/lawstyle.css
+++ b/css/lawstyle.css
@@ -42,9 +42,9 @@ table.oldschool td.foot {
   vertical-align:top;}
       
 a:hover {
-  color: black;
+  color: #93df05;
   text-decoration: none;}
 
 a:link, a:visited, a:active {
-  color: #93df05;
+  color: #2e6930;
   text-decoration: none;} 
