--- a/css/lawstyle.css
+++ b/css/lawstyle.css
@@ -46,5 +46,5 @@ a:hover {
   text-decoration: none;}
 
 a:link, a:visited, a:active {
-  color: #2e6930;
+  color: #357a38;
   text-decoration: none;} 
