--- a/css/lawstyle.css
+++ b/css/lawstyle.css
@@ -41,10 +41,10 @@ table.oldschool td.foot {
   padding:10px 5px;
   vertical-align:top;}
       
+a:link, a:visited, a:active {
+  color: #419545;
+  text-decoration: none;} 
+
 a:hover {
   color: #93df05;
   text-decoration: none;}
-
-a:link, a:visited, a:active {
-  color: #357a38;
-  text-decoration: none;} 
