--- a/css/lawstyle.css
+++ b/css/lawstyle.css
@@ -50,9 +50,9 @@ a:hover {
   text-decoration: none;}
 
 rhwo-gif {
-  width: 100%;  
+  width: 50%;  
   height: auto;}
 
 thumb {
-  width: 50%;  
+  width: 240px;  
   height: auto;}
