--- a/css/lawstyle.css
+++ b/css/lawstyle.css
@@ -49,10 +49,10 @@ a:hover {
   color: #93df05;
   text-decoration: none;}
 
-rhwo-gif {
+#rhwo-gif {
   width: 50%;  
   height: auto;}
 
-thumb {
+#thumb {
   width: 240px;  
   height: auto;}
