--- a/css/lawstyle.css
+++ b/css/lawstyle.css
@@ -33,6 +33,10 @@ table.oldschool td.body {
 
 h1 {
   font-family: "Montserrat", sans-serif;
+  font-size: 20px;}
+
+h3 {
+  font-family: "Montserrat", sans-serif;
   font-size: 16px;}
 
 table.oldschool td.foot {
