--- a/css/lawstyle.css
+++ b/css/lawstyle.css
@@ -21,7 +21,7 @@ table.oldschool td.menu {
   font-size: 16px;}
   
 table.oldschool td.body {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
   text-align: left;
   word-break: normal;
